"added in other methods"

--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -690,6 +690,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean(x):\n",
+    "    if 'Mega' in x:\n",
+    "        change= x.split('Mega')[1] # split the string in two on 'Mega' and keep the second\n",
+    "        name= 'Mega'+ change\n",
+    "        return name\n",
+    "    else:\n",
+    "        return x\n",
+    "\n",
+    "pokemon['Name']=pokemon['Name'].apply(clean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pokemon.Name = pokemon.Name.replace('*Mega','Mega',regex=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1409,6 +1435,14 @@
     "pokemon['Combo Type'] = pokemon.apply(combo, axis =1)\n",
     "\n",
     "pokemon.head(10)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pokemon['Combo Type']=np.where(pokemon['Type 2'].isna(),pokemon['Type 1],pokemon['Type 1']+'-'+pokemon['Type 2'])"
    ]
   },
   {
