--- a/your-code/challenge-2.ipynb
+++ b/your-code/challenge-2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -950,6 +950,14 @@
     "cols1 = [encoder1.categories_[i][:] for i in range(len(X1.columns))]\n",
     "X1_encode = pd.DataFrame(encoder1.transform(X1).toarray(),columns=cols1)\n",
     "X1_encode"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "no need actually for the odd bit of code for column names, just use Erin's standard then rename them later"
    ]
   },
   {
@@ -1962,6 +1970,52 @@
     "# simply add them together\n",
     "type_encode = X1_encode + X2_encode\n",
     "type_encode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#alternate, could have created the category columns all as 0\n",
+    "#then use a function to put 1 values in where appropriate\n",
+    "#then select just those columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#alternate from Bea\n",
+    "def combo(x):\n",
+    "    if pd.isna(x['Type 2']):\n",
+    "        combo_type=x['Type 1']\n",
+    "    else:\n",
+    "        combo_type=x['Type 1']  + ' ' + x['Type 2']\n",
+    "    return combo_type\n",
+    "\n",
+    "pokemon['combo_type'] = pokemon.apply(combo,axis=1)\n",
+    "pokemon\n",
+    "\n",
+    "types = []\n",
+    "\n",
+    "for i in pokemon['Type 2'].unique():\n",
+    "    types.append(i)\n",
+    "    \n",
+    "types\n",
+    "\n",
+    "#In this new list all the values will be 0, and we are gping to loop in Type 1 and type 2, just if there's match with types.\n",
+    "\n",
+    "for i in types:\n",
+    "    pokemon[i] = 0\n",
+    "for j in pokemon['Type 1']:\n",
+    "    pokemon.loc[pokemon['Type 1'] == j,j] = 1\n",
+    "for k in pokemon['Type 2']:\n",
+    "    pokemon.loc[pokemon['Type 2'] == k,k] = 1\n",
+    "pokemon"
    ]
   },
   {
@@ -3534,10 +3588,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\eliza\\AppData\\Local\\Temp\\ipykernel_10492\\4148222379.py:1: FutureWarning: The default value of numeric_only in DataFrameGroupBy.mean is deprecated. In a future version, numeric_only will default to False. Either specify numeric_only or select only columns which should be valid for the function.\n",
+      "  grouped_pokemon = pokemon.groupby(['Type 1', 'Type 2']).mean()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ground</th>\n",
+       "      <th>Fire</th>\n",
+       "      <td>383.0</td>\n",
+       "      <td>770.000000</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>180.0</td>\n",
+       "      <td>160.000000</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Dragon</th>\n",
+       "      <th>Ice</th>\n",
+       "      <td>646.0</td>\n",
+       "      <td>686.666667</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>93.333333</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>93.333333</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Steel</th>\n",
+       "      <th>Dragon</th>\n",
+       "      <td>483.0</td>\n",
+       "      <td>680.000000</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ghost</th>\n",
+       "      <th>Dragon</th>\n",
+       "      <td>487.0</td>\n",
+       "      <td>680.000000</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>110.000000</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>110.000000</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Psychic</th>\n",
+       "      <th>Dark</th>\n",
+       "      <td>720.0</td>\n",
+       "      <td>680.000000</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>170.0</td>\n",
+       "      <td>130.000000</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Poison</th>\n",
+       "      <th>Bug</th>\n",
+       "      <td>451.0</td>\n",
+       "      <td>330.000000</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Normal</th>\n",
+       "      <th>Fairy</th>\n",
+       "      <td>216.4</td>\n",
+       "      <td>330.000000</td>\n",
+       "      <td>99.6</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>49.200000</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>52.200000</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Poison</th>\n",
+       "      <th>Water</th>\n",
+       "      <td>690.0</td>\n",
+       "      <td>320.000000</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">Bug</th>\n",
+       "      <th>Water</th>\n",
+       "      <td>283.0</td>\n",
+       "      <td>269.000000</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>52.000000</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ghost</th>\n",
+       "      <td>292.0</td>\n",
+       "      <td>236.000000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>136 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    #       Total     HP  Attack     Defense  Sp. Atk  \\\n",
+       "Type 1  Type 2                                                          \n",
+       "Ground  Fire    383.0  770.000000  100.0   180.0  160.000000    150.0   \n",
+       "Dragon  Ice     646.0  686.666667  125.0   140.0   93.333333    140.0   \n",
+       "Steel   Dragon  483.0  680.000000  100.0   120.0  120.000000    150.0   \n",
+       "Ghost   Dragon  487.0  680.000000  150.0   110.0  110.000000    110.0   \n",
+       "Psychic Dark    720.0  680.000000   80.0   160.0   60.000000    170.0   \n",
+       "...               ...         ...    ...     ...         ...      ...   \n",
+       "Poison  Bug     451.0  330.000000   40.0    50.0   90.000000     30.0   \n",
+       "Normal  Fairy   216.4  330.000000   99.6    45.0   49.200000     54.0   \n",
+       "Poison  Water   690.0  320.000000   50.0    60.0   60.000000     60.0   \n",
+       "Bug     Water   283.0  269.000000   40.0    30.0   32.000000     50.0   \n",
+       "        Ghost   292.0  236.000000    1.0    90.0   45.000000     30.0   \n",
+       "\n",
+       "                   Sp. Def  Speed  Generation  Legendary  \n",
+       "Type 1  Type 2                                            \n",
+       "Ground  Fire     90.000000   90.0         3.0        1.0  \n",
+       "Dragon  Ice      93.333333   95.0         5.0        1.0  \n",
+       "Steel   Dragon  100.000000   90.0         4.0        1.0  \n",
+       "Ghost   Dragon  110.000000   90.0         4.0        1.0  \n",
+       "Psychic Dark    130.000000   80.0         6.0        1.0  \n",
+       "...                    ...    ...         ...        ...  \n",
+       "Poison  Bug      55.000000   65.0         4.0        0.0  \n",
+       "Normal  Fairy    52.200000   30.0         2.4        0.0  \n",
+       "Poison  Water    60.000000   30.0         6.0        0.0  \n",
+       "Bug     Water    52.000000   65.0         3.0        0.0  \n",
+       "        Ghost    30.000000   40.0         3.0        0.0  \n",
+       "\n",
+       "[136 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped_pokemon = pokemon.groupby(['Type 1', 'Type 2']).mean()\n",
+    "grouped_pokemon.sort_values(by = 'Total', ascending = False)"
+   ]
   }
  ],
  "metadata": {
